# fp-sem1-lab2

./: .gitignore  GaussParallel.hs  README.md  gauss-parallel.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: gauss-parallel-0.1.0.0-inplace.conf  package.cache
src/: Gauss.hs
test/: Spec.hs
