cabal-version:      1.12
name:               gauss-parallel
version:            0.1.0.0
synopsis:           Parallel Gaussian elimination in Haskell
license:            BSD3
author:             Anton
build-type:         Simple

library
    exposed-modules:  Gauss
    hs-source-dirs:   src
    build-depends:    base >= 4.7 && < 5,
                      parallel,
                      clock
    default-language: Haskell2010
    ghc-options:      -O2

executable gauss-parallel
    main-is:          Main.hs
    hs-source-dirs:   app
    
    build-depends:    base,
                      gauss-parallel,
                      clock,
                      parallel
                      
    default-language: Haskell2010
    ghc-options:      -threaded -O2

test-suite gauss-parallel-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base,
                      gauss-parallel,
                      hspec,
                      clock           
    default-language: Haskell2010
    ghc-options:      -threaded -O2